--- a/templates/workbench.html
+++ b/templates/workbench.html
@@ -24,7 +24,7 @@
           <!-- <a class="nav-link active" href="/about">About</a> -->
         </li>
         <li class="nav-item">
-          <!-- <a class="nav-link active" href="/help">Help?</a> -->
+          <a class="nav-link active" href="/Help">Help</a>
         </li>
         
 
@@ -114,7 +114,10 @@
                 <b>SmartSyncBot</b>
               </div>
               <div class="message-content">
-                Hi, Welcome to SmartSyncBot  
+                Hi, Welcome to SmartSyncBot, the dedicated assistant for SSBPharma. I am here to help you with all your field mapping and data sync queries.
+How may I assist you today?
+
+
               </div>
             </div>
           </li>
