--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,26 @@
     <link rel="shortcut icon" href="/static/images/iqvialogo.jpg" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
+    <style>
+        .center-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 75vh;
+        margin-top: 40px;
+      }
+
+      .architecure  {
+        max-width: 100%;
+        max-height: 100%;
+        margin-left: 20px;
+      }
+      .info {
+
+  margin-bottom: 20px; 
+}
+
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -23,9 +43,9 @@
         <li class="nav-item">
           <a class="nav-link active" href="/">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active" href="/about">About</a>
-        </li>
+        </li> -->
 
         <!-- <li class="nav-item">
           <a class="nav-link active" href="/workbench">Workbench</a>
@@ -35,7 +55,7 @@
             <a class="nav-link active" href="/contacts">Help</a>
           </li> {% endcomment %}
           <li class="nav-item">
-            <a class="nav-link active" href="/help">Help?</a>
+            <a class="nav-link active" href="/Faq">FAQ</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -51,14 +71,14 @@
 
   <body>
     <div class="info">
-      <b>SmartSyncBot</b> is an advanced solution designed to verify data across integrated applications and retrieve specific field mapping details. This intelligent bot ensures data synchronization and consistency throughout the integrated ecosystem. By leveraging its capabilities, users can easily validate data across multiple applications, ensuring accuracy and reliability. Additionally, SmartSyncBot provides comprehensive field mapping information, allowing users to understand how data is mapped across integrated systems. With its efficient and automated approach, SmartSyncBot streamlines data verification and enhances the overall integration process.
+      <b>SmartSyncBot</b> SymartSyncBot is a sophisticated AI-powered tool designed exclusively for data integration projects. As the complexities of data integration grow, having a smart assistant to swiftly navigate through data sources and mappings become essential. SmartSyncbot fills this need seamlessly.
 
     </div>
-    <div class="architecure">
-      <img src="/static/images/architecure.png" width="500px" height="300px" alt="architecure image">
+    <div class="architecure ">
+      <img src="/static/images/architech.png" width="1000px" height="500px" alt="architecure image">
     </div>
     <div class="more">
-      <h6><b>Benefits of Using this bot</b></h6>
+      <!-- <h6><b>Benefits of Using this bot</b></h6>
       <ol>
         <li>This solution empowers non-technical users, such as business analysts or domain experts, to perform data verification independently.</li>
         <li>This reduces the dependency on technical support, streamlining the verification process and avoiding bottlenecks.</li>
@@ -70,7 +90,7 @@
         <li>This tool provide reliable and uniform output, maintaining consistency in their responses.</li>
         <li>They minimize errors and discrepancies by following predefined rules and patterns.</li>
         
-      </ol>
+      </ol> -->
     </div>
   </body>
 </html>
