--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,28 @@
     <link rel="shortcut icon" href="/static/images/iqvialogo.jpg" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/el.css">
+    <style>
+.navbar-nav-centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .navbar-nav-centered h2 {
+    font-size: 20px;
+    color: rgb(9, 127, 232);
+    text-align: center;
+    animation: blinker 1s linear infinite;
+    margin: 0;
+  }
+
+  @keyframes blinker {
+    50% {
+      opacity:100;
+    }
+  }
+    </style>
+
   </head>
   <body>
     
@@ -18,7 +40,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-nav-centered">
         <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/home">Home</a>
         </li> -->
@@ -33,8 +55,10 @@
             <a class="nav-link active" href="/contacts">Help</a>
           </li> {% endcomment %}
           <li class="nav-item">
-            <a class="nav-link active" href="/help">Help?</a>
+            <a class="nav-link active" href="/Faq">FAQ</a>
           </li>
+
+
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -52,53 +76,69 @@
     width: 1000px;
     height: 500px;
 }
+.full-width-image-container {
+    position: relative; /* Make sure it's a positioned container */
+    width: 100%;
+    height: 80vh;
+    z-index: 200; /* Ensure it's above other content */
+}
+
+.full-width-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.image-text {
+    position: absolute;
+    top: 42%; /* Position at 50% from the top of the container */
+    left: 0;
+    width: 100%;
+    transform: translateY(-50%); /* Center the text vertically */
+    /*background-color: rgba(0, 0, 0, 0.7); /* Add a semi-transparent background */
+    color: white;
+    padding: 5px;
+    text-align: center;
+    font-size: 40px;
+    animation: blinker 1s linear infinite;
+    line-height: 1.2;
+}
+@keyframes blinker {
+    0% {
+        opacity: 0.2; /* Set initial opacity to make the text dim */
+    }
+    50% {
+        opacity: 1; /* Set to full opacity for half of the animation */
+    }
+    100% {
+        opacity: 0.2; /* Back to dim opacity at the end */
+    }
+}
+.image-text-subtitle {
+    position: absolute;
+    top: 50%; /* Position at 85% from the top of the container */
+    left: 0;
+    width: 100%;
+    transform: translateY(-50%); /* Center the text vertically */
+    background-color: rgba(0, 0, 0, 0.4); /* Add a semi-transparent background */
+    color: white;
+    padding: 5px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.2;
+}
 </style>
 
-    <div class="container-fluid" mt-0 px-0" class="sizec"  >
-      <div id="carouselExampleCaptions" class="carousel slide" style="max-height: 500px;">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <a href ='http://127.0.0.1:8082/about' ><img src="/static/images/hands.jpg" class="tales" alt="About" style="object-fit: cover; "></a>
-            <div class="carousel-caption d-none d-md-block">
-              <!-- <h5 class="display-3"><b> learn about SmartSyncBot<b</h5> -->
-              
-            </div>
-          </div>
-          <div class="carousel-item">
-            <a href="http://127.0.0.1:8082/projects"><img src="/static/images/medic.jpg" class="tales" alt="Login" style="object-fit: cover; "></a>
-            <div class="carousel-caption d-none d-md-block">
-              <!-- <h5 class="display-3" ><b>Login</b></h5> -->
-              
-            </div>
-          </div>
-          <div class="carousel-item">
-            <a href="http://127.0.0.1:8082/contacts"><img src="/static/images/heart.jpg" class="tales" alt="Help" style="object-fit: cover; "></a>
-            <div class="carousel-caption d-none d-md-block">
-              <!-- <h5 class="display-3"><b> Want Help? Click Here</b></h5> -->
-              
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+
+
+<div class="full-width-image-container">
+  <img src="/static/images/hands.jpg" class="full-width-image" alt="Full Width Image">
+      <div class="image-text">
+          SmartSyncBot
       </div>
-    </div>
-
-    <div class="container my-3">
-        <h2>Welcome to SMART SYNC BOT</h2>
-    </div>
-
+      <div class="image-text-subtitle">
+          Intelligent Sync Verification & Field Mapping Finder
+      </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
