--- a/templates/home.html
+++ b/templates/home.html
@@ -60,11 +60,11 @@
 
 
         </ul>
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        {% comment %} <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" href="/login">LOGIN</a>
           </li>
-      </ul>
+      </ul> {% endcomment %}
     </div>
   </div>
 </nav>
