--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -121,11 +121,15 @@ body{
           <li class="nav-item">
             <a class="nav-link active" href="/Faq">FAQ</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/contacts">Contacts</a>
+          </li>
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" href="/login">LOGIN</a>
           </li>
+          
       </ul>
     </div>
   </div>
@@ -147,17 +151,11 @@ body{
           <p> <b>SmartSyncBot</b> is a web application that serves as a sophisticated AI-powered tool specifically designed for data integration projects. It assists users in efficiently managing and navigating through data sources and mappings to simplify complex data integration tasks.</p>
       </div>
 
-      <div class="question">
-          <button>
-              <span class="ques">2.	How does SmartSyncBot work?</span>
-              <i class="fas fa-chevron-down d-arrow"></i>
-          </button>
-          <p>Refer our Architectural diagram</p>
-      </div>
+ 
 
       <div class="question">
           <button>
-              <span class="ques">3.	What is the primary Purpose of SmartSyncBot?</span>
+              <span class="ques">2.	What is the primary Purpose of SmartSyncBot?</span>
               <i class="fas fa-chevron-down d-arrow"></i>
           </button>
           <p><b>SmartSyncBot</b> primarily designed for Data Integration project needs.
@@ -168,7 +166,7 @@ body{
 
       <div class="question">
           <button>
-              <span class="ques">4.	What are the benefits of using SmartSyncBot?</span>
+              <span class="ques">3.	What are the benefits of using SmartSyncBot?</span>
               <i class="fas fa-chevron-down d-arrow"></i>
           </button>
           <p>•	<b>Conversational Interface -</b> SmartSyncBot offers a user-friendly conversational interface powered by chatGPT. Instead of using a command-line interface or providing direct inputs, users can have natural conversations with the bot, making interactions more intuitive.
@@ -179,14 +177,14 @@ body{
       </div>
       <div class="question">
         <button>
-            <span class="ques">5.	Is SmartSyncBot customizable for different data integration projects?</span>
+            <span class="ques">4.	Is SmartSyncBot customizable for different data integration projects?</span>
             <i class="fas fa-chevron-down d-arrow"></i>
         </button>
         <p>Yes, absolutely. It is designed in such a way that we can customize the solution for any Data Integration / Data Warehouse projects.</p>
     </div>
     <div class="question">
       <button>
-          <span class="ques">6.	What measures are in place to ensure data privacy and security?</span>
+          <span class="ques">5.	What measures are in place to ensure data privacy and security?</span>
           <i class="fas fa-chevron-down d-arrow"></i>
       </button>
       <p><br><b>• Azure OpenAI:</b> Our platform is built on Azure OpenAI, a trusted and secure environment known for its robust security features.
@@ -197,7 +195,7 @@ body{
   </div>
   <div class="question">
     <button>
-        <span class="ques">7.	Who can benefit from using SmartSyncBot?</span>
+        <span class="ques">6.	Who can benefit from using SmartSyncBot?</span>
         <i class="fas fa-chevron-down d-arrow"></i>
     </button>
     <p>Our user-friendly interface empowers non-technical users, such as business analysts and domain experts, to effortlessly verify data synchronization. 
@@ -207,21 +205,21 @@ body{
 </div>
 <div class="question">
   <button>
-      <span class="ques">8.	Is any technical expertise required to use SmartSyncBot?</span>
+      <span class="ques">7.	Is any technical expertise required to use SmartSyncBot?</span>
       <i class="fas fa-chevron-down d-arrow"></i>
   </button>
   <p>No, SmartSyncBot is designed to cater to users with varying levels of technical expertise. The conversational interface powered by chatGPT allows users to interact with the tool using natural language, eliminating the need for in-depth technical knowledge.</p>
 </div>
 <div class="question">
   <button>
-      <span class="ques">9.	How can I access SmartSyncBot?</span>
+      <span class="ques">8.	How can I access SmartSyncBot?</span>
       <i class="fas fa-chevron-down d-arrow"></i>
   </button>
   <p>Accessing SmartSyncBot is simple. Just visit the provided URL to access its web application. Start using the tool by engaging with its conversational interface. Please note that authorization as a user is required to utilize the conversational interface.</p>
 </div>
 <div class="question">
   <button>
-      <span class="ques">10.	Is your BOT trained with client data?</span>
+      <span class="ques">9.	Is your BOT trained with client data?</span>
       <i class="fas fa-chevron-down d-arrow"></i>
   </button>
   <p>No, our approach is distinct. We do not grant GPT direct access to entire client data. Instead, we utilize a combination of context data and the user's prompt. This allows GPT to generate AI-enabled output without requiring access to the complete client data.</p>
