--- a/templates/about.html
+++ b/templates/about.html
@@ -57,6 +57,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="/Faq">FAQ</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/contacts">Contacts</a>
+          </li>
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -75,7 +78,7 @@
 
     </div>
     <div class="architecure ">
-      <img src="/static/images/architech.png" width="1000px" height="500px" alt="architecure image">
+      <img src="/static/images/MicrosoftTeams.png" width="1000px" height="500px" alt="architecure image">
     </div>
     <div class="more">
       <!-- <h6><b>Benefits of Using this bot</b></h6>
