--- a/templates/home.html
+++ b/templates/home.html
@@ -57,14 +57,17 @@
           <li class="nav-item">
             <a class="nav-link active" href="/Faq">FAQ</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/contacts">Contacts</a>
+          </li>
 
 
         </ul>
-        {% comment %} <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" href="/login">LOGIN</a>
           </li>
-      </ul> {% endcomment %}
+      </ul>
     </div>
   </div>
 </nav>
